style: add CSS for button and container styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>QuickQueue | Akindewa - Cloud Engineer</title>
 </head>
 <body>
     <div class="container">
@@ -14,15 +14,22 @@
         <section class="project-pitch">
             <h2>QuickQueue – AI-Powered Appointment Scheduling for Small Businesses</h2>
             <p class="pitch-text">
-                <!--  2-3 sentence pitch -->
-                QuickQueue revolutionizes appointment scheduling for small businesses by replacing clunky calendars and missed calls with AI-powered automation. Our platform learns your business patterns like peak hours and frequent no-shows to optimize bookings, reduce empty slots, and auto-send reminders via SMS. For hairstylists, dentists, or local repair shops, this means less admin work, more customers, and 30% fewer last-minute cancellations. Unlike bulky enterprise software, QuickQueue works right out of the box, with no training required. It’s scheduling made smart, simple, and stress-free.
-            </p>
+                <!--  2-3 sentence pitch -->                 
+                QuickQueue revolutionizes appointment scheduling for small businesses by replacing clunky calendars and missed calls with AI-powered automation. 
+                Our platform learns your business patterns like peak hours and frequent no-shows to optimize bookings, reduce empty slots, and auto-send reminders via SMS. For hairstylists, dentists, or local repair shops, this means less admin work, more customers, and 30% fewer last-minute cancellations.Unlike bulky enterprise software, QuickQueue works right out of the box, with no training required. It’s scheduling made smart, simple, and stress-free.
+           </p>
 
-            <p>Problem Solved:
-                "Small businesses like salons, clinics, and repair shops waste countless hours managing appointments through endless phone calls, manual calendar updates, and dealing with no-shows that cost up to 30% of their bookings."
-                  <br>
-                Solution:
-                "QuickQueue eliminates the chaos with an AI-powered scheduler that lets customers book instantly via a shared link, automatically optimizes time slots based on peak hours and service duration, and predicts high-risk no-shows to suggest smart solutions like deposits - all while keeping human oversight where it matters most."</p>
+            <h3>Problem</h3>
+
+            <p>
+                Small businesses like salons, clinics, and repair shops waste countless hours managing appointments through endless phone calls, manual calendar updates, and dealing with no-shows that cost up to 30% of their bookings.
+                
+            </p> 
+            
+            <h3>Solution:</h3>
+            <p>
+                QuickQueue eliminates the chaos with an AI-powered scheduler that lets customers book instantly via a shared link, automatically optimizes time slots based on peak hours and service duration, and predicts high-risk no-shows to suggest smart solutions like deposits - all while keeping human oversight where it matters most.
+            </p>
         </section>
 
 
@@ -36,7 +43,10 @@
             </p>
         </section>
 
+        <button onclick="changeTheme()">✨ Change Mood</button>
 
+
+        <footer>&copy; 2025 Akindewa – All rights reserved.</footer>
 
 
     </div>
