fix: resolve layout and script issues, update README

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 </div> 
              
                 <div class="problems animate-in">
-                    <h3>Problem</h3>
+                    <h2>Problem</h2>
                     <p>Small businesses waste 5+ hours/week managing appointments via:</p>   
                     <ul>
                         <li>Phone call interruptions (30% of staff time)</li>
                         <li>Manual calendar conflicts</li>
                         <li>25% no-show rate for bookings.</li>
-                        <!-- <li>Difficulty tracking peak demand hours.</li> -->
+                        <li>Difficulty tracking peak demand hours.</li>
                         <li>Clients forgetting appointment times.</li>
                         <li>Missed calls during business hours.</li>  
                         <li>Double-bookings from manual errors.</li>
@@ -46,7 +46,7 @@
                 </div>
             
                 <div class="solutions animate-in">
-                    <h3>Solution:</h3>
+                    <h2>Solution:</h2>
                     <ul>
                         <li>Reduces no-shows by 30% via SMS reminders</li>
                         <li>Provides 24/7 online booking portal.</li>
